--- a/19-GuitarLA/css/app.css
+++ b/19-GuitarLA/css/app.css
@@ -228,6 +228,49 @@ img {
     color: var(--blanco);
 }
 
+.producto__formulario {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.producto__label {
+    font-size: 2.2rem;
+    margin-right: 1rem;
+}
+
+.producto__cantidad {
+    border: 2px solid var(--primary);
+    padding: 1rem;
+    text-align: center;
+}
+
+.producto__cantidad:focus-visible {
+    outline: 2px solid var(--primary);
+    border: none;
+}
+
+.producto__agregar-carrito {
+    margin-top: 3rem;
+    display: block;
+    background-color: var(--primary);
+    text-decoration: none;
+    text-transform: uppercase;
+    border: none;
+    text-align: center;
+    padding: 2rem 5rem;
+    color: var(--blanco);
+    font-size: 1.8rem;
+    font-weight: 700;
+    transition-property: background-color;
+    transition-duration: .3s;
+}
+
+.producto__agregar-carrito:hover {
+    background-color: var(--negro);
+    cursor: pointer;
+}
+
 .cursos {
     background-image: linear-gradient(to right, rgb(0 0 0 / .65), rgb(0 0 0 / .65)), url('../img/cursos_bg.jpg');
     padding: 10rem 0;
@@ -301,6 +344,11 @@ img {
     .blog__grid--pagina {
         grid-template-columns: repeat(3, 1fr);
     }
+}
+
+.entrada {
+    max-width: 80rem;
+    margin: 0 auto;
 }
 
 .entrada__contenido {
